--- a/app/07product/views/productinforestrictrule.html
+++ b/app/07product/views/productinforestrictrule.html
@@ -1,11 +1,23 @@
 <div class="container-fluid form-horizontal">
 
 	<div class="col-xs-12 col-md-12 mt10">
+		
+		<div class="col-xs-12">
+			<div class="col-xs-2 text-right">
+				<br/>
+				<br/>
+				<font face="Courier" size="5">限制信息</font>
+				<br/>
+				<br/>
+			</div>
+		</div>
 
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">支付类型</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.pay_type == '1'" class="form-control-static">预存支付</p>
+				<p ng-if="saleobj.pay_type == '0'" class="form-control-static">其他方式支付</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="pay_type" value="0"
 				  ng-model="saleobj.pay_type" ng-disabled="true" 
 				  > 其他方式支付
@@ -14,7 +26,7 @@
 				  <input type="radio" name="pay_type" value="1"
 				  ng-model="saleobj.pay_type" ng-disabled="true"
 				  > 预存支付
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -26,8 +38,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">库存类型</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
-				  <input type="radio" name="stock_type" value="0"
+				<p ng-if="saleobj.stock_type == '0'" class="form-control-static">不启用</p>
+				<p ng-if="saleobj.stock_type == '1'" class="form-control-static">启用: &nbsp;{{saleobj.current_stock_num}}</p>
+				<!--<input type="radio" name="stock_type" value="0"
 				  ng-model="saleobj.stock_type" ng-disabled="true" 
 				  > 不启用
 				</label>
@@ -38,7 +51,7 @@
 				</label>
 				<div class="col-sm-6 col-xs-12 pull-right" ng-show="saleobj.stock_type == 1">
 					<input type="number" class="form-control" placeholder="预存数量" ng-disabled="true" min='0' ng-model="saleobj.current_stock_num">
-				</div>
+				</div>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -50,7 +63,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">销售目标</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.sale_target_type == '1'" class="form-control-static">独立授权销售</p>
+				<p ng-if="saleobj.sale_target_type == '0'" class="form-control-static">公开销售</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="sale_target_type" value="0"
 				  ng-model="saleobj.sale_target_type" ng-disabled="true"
 				  > 公开销售
@@ -59,7 +74,7 @@
 				  <input type="radio" name="sale_target_type" value="1"
 				  ng-model="saleobj.sale_target_type" ng-disabled="true"
 				  > 独立授权销售
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -71,8 +86,13 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">生效时间</label>
 			<div class="col-sm-4 col-xs-12">
-				<select class="form-control" ng-model="saleobj.take_effect_type" ng-disabled="true" ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in page.take_effect_typearr">
-	            </select>
+				<p ng-if="saleobj.take_effect_type != '0' && saleobj.take_effect_type != '-1' && saleobj.take_effect_type != undefined" class="form-control-static">
+					{{saleobj.take_effect_type}}小时之后
+				</p>
+				<p ng-if="saleobj.take_effect_type == '0'" class="form-control-static">即时</p>
+				<p ng-if="saleobj.take_effect_type == '-1'" class="form-control-static">次日</p>
+				<!--<select class="form-control" ng-model="saleobj.take_effect_type" ng-disabled="true" ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in page.take_effect_typearr">
+	            </select>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -94,7 +114,8 @@
 			<div class="form-group">
 				<label class="col-sm-2 col-xs-12 control-label">最大限制</label>
 				<div class="col-sm-4 col-xs-12">
-					<input type="number" class="form-control" ng-model="saleobj.max_limit" ng-disabled="true">
+					<p class="form-control-static">{{saleobj.max_limit}}</p>
+					<!--<input type="number" class="form-control" ng-model="saleobj.max_limit" ng-disabled="true">-->
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<p class="form-control-static text-danger">
@@ -106,8 +127,8 @@
 			<div class="form-group">
 				<label class="col-sm-2 col-xs-12 control-label">每单限制</label>
 				<div class="col-sm-4 col-xs-12">
-					<input type="number" class="form-control" ng-model="saleobj.order_num_limit" ng-disabled="true">
-
+					<p class="form-control-static">{{saleobj.order_num_limit}}</p>
+					<!--<input type="number" class="form-control" ng-model="saleobj.order_num_limit" ng-disabled="true">-->
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<p class="form-control-static text-danger">
@@ -121,7 +142,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">出游时间</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.tour_date_type == '1'" class="form-control-static">启用</p>
+				<p ng-if="saleobj.tour_date_type == '0'" class="form-control-static">不启用</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="tour_date_type" value="0"
 				  ng-model="saleobj.tour_date_type"  ng-disabled="true"
 				  > 不启用
@@ -130,7 +153,7 @@
 				  <input type="radio" name="tour_date_type" value="1"
 				  ng-model="saleobj.tour_date_type" ng-disabled="true"
 				  > 启用
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -142,7 +165,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">允许退票</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.back_type == '1'" class="form-control-static">不允许</p>
+				<p ng-if="saleobj.back_type == '0'" class="form-control-static">允许</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="back_type" value="0"
 				  ng-model="saleobj.back_type" ng-disabled="true"
 				  > 允许
@@ -151,7 +176,7 @@
 				  <input type="radio" name="back_type" value="1"
 				  ng-model="saleobj.back_type" ng-disabled="true"
 				  > 不允许
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -163,7 +188,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">退票审核</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.apply_state == '1'" class="form-control-static">需要</p>
+				<p ng-if="saleobj.apply_state == '0'" class="form-control-static">不需要</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="apply_state" value="0"
 				  ng-model="saleobj.apply_state" ng-disabled="true"
 				  > 不需要
@@ -172,7 +199,7 @@
 				  <input type="radio" name="apply_state" value="1"
 				  ng-model="saleobj.apply_state" ng-disabled="true"
 				  > 需要
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -184,7 +211,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">是否出票</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.ticket_type == '1'" class="form-control-static">不出票</p>
+				<p ng-if="saleobj.ticket_type == '0'" class="form-control-static">出票</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="ticket_type" value="0"
 				  ng-model="saleobj.ticket_type" ng-disabled="true"
 				  > 出票
@@ -193,7 +222,7 @@
 				  <input type="radio" name="ticket_type" value="8"
 				  ng-model="saleobj.ticket_type" ng-disabled="true"
 				  > 不出票
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -205,7 +234,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">实名限制</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.user_status == '1'" class="form-control-static">实名制</p>
+				<p ng-if="saleobj.user_status == '0'" class="form-control-static">不实名制</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="user_status" value="0"
 				  ng-model="saleobj.user_status" ng-disabled="true"
 				  > 不实名制
@@ -214,7 +245,7 @@
 				  <input type="radio" name="user_status" value="1"
 				  ng-model="saleobj.user_status" ng-disabled="true"
 				  > 实名制
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -226,7 +257,9 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">票码类型</label>
 			<div class="col-sm-4 col-xs-12">
-				<label class="radio-inline">
+				<p ng-if="saleobj.sms_ticketcode_type == '1'" class="form-control-static">订单唯一码</p>
+				<p ng-if="saleobj.sms_ticketcode_type == '0'" class="form-control-static">票码</p>
+				<!--<label class="radio-inline">
 				  <input type="radio" name="sms_ticketcode_type" value="0"
 				  ng-model="saleobj.sms_ticketcode_type" ng-disabled="true"
 				  > 票码
@@ -235,7 +268,7 @@
 				  <input type="radio" name="sms_ticketcode_type" value="1"
 				  ng-model="saleobj.sms_ticketcode_type" ng-disabled="true"
 				  > 订单唯一码
-				</label>
+				</label>-->
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
@@ -244,19 +277,18 @@
 			</div>
 		</div>
 
-		<div class="form-group" ng-if="util.what == 'edit'">
+		<!--<div class="form-group" ng-if="util.what == 'edit'">
 			<label class="col-sm-2 col-xs-12 control-label"></label>
 			<div class="col-sm-4 col-xs-12">
 				<button type="button" class="btn btn-primary btn-lg" ng-click="save()">保存</button>
-				<button type="button" class="btn btn-primary btn-lg" ng-click="saveAndBack()" 
-						ng-if="(saleobj.id != '') && (util.$uibModalInstance != undefined)">保存并返回</button>
+				<button type="button" class="btn btn-primary btn-lg" ng-click="saveAndBack()" ng-if="(saleobj.id != '') && (util.$uibModalInstance != undefined)">保存并返回</button>
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
 
 				</p>
 			</div>
-		</div>
+		</div>-->
 
 	</div>
 
