--- a/app/07product/views/productinfoshareprofit.html
+++ b/app/07product/views/productinfoshareprofit.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 mt10">
+
 	<!--<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			销售品分润设置<button type="button" 
@@ -11,14 +11,25 @@
 		<div class="panel-body">-->
 			<div class="container-fluid form-group">
 				<div class="col-xs-12 form-group" >
+		
+		<div class="col-xs-12">
+			<div class="col-xs-2 text-right">
+				<br/>
+				<br/>
+				<font face="Courier" size="5">销售品分润设置</font>
+				<br/>
+				<br/>
+			</div>
+		</div>
 					<!--<div class="col-xs-1"></div>-->
 					<div class="col-xs-2">
 						<label for="fxbt" class="pull-right text-right mt10">分享标题&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">
-						<input type="text" name="fxbt" class="form-control form-inline" placeholder="分享标题" ng-model="salefrobj.share_title" />
+					<div class="col-xs-4">
+						<p class="form-control-static">{{salefrobj.share_title}}</p>
+						<!--<input type="text" name="fxbt" class="form-control form-inline" placeholder="分享标题" ng-model="salefrobj.share_title" />-->
 					</div>
-					<div class="col-sm-3 mt10">
+					<div class="col-sm-6 mt10">
 						<font face="Courier" class="text-danger"></font>
 					</div>	
 				</div>
@@ -28,11 +39,12 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">标签&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">					
-						<input type="text" class="form-control" placeholder="标签之间请以逗号分隔开"
-							ng-model="salefrobj.label">
+					<div class="col-xs-4">				
+						<p class="form-control-static">{{salefrobj.label}}</p>	
+						<!--<input type="text" class="form-control" placeholder="标签之间请以逗号分隔开"
+							ng-model="salefrobj.label">-->
 					</div>
-					<div class="col-sm-3 mt10">
+					<div class="col-sm-6 mt10">
 						<font face="Courier" class="text-danger">各标签之间必须以逗号分隔开</font>
 					</div>	
 				</div>
@@ -43,14 +55,15 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">
-						<div class="input-group">							
+					<div class="col-xs-4">
+						<p class="form-control-static">{{salefrobj.profit_ratio}}</p>	
+						<!--<div class="input-group">							
 							<input type="number" class="form-control" placeholder="利润率" min='0'
 							ng-model="salefrobj.profit_ratio" value="0" ng-change="change()">
 							<span class="input-group-addon">%</span>
-						</div>
+						</div>-->
 					</div>
-					<div class="col-sm-3 mt10">
+					<div class="col-sm-6 mt10">
 						<font face="Courier" class="text-danger"></font>
 					</div>	
 				</div>
@@ -61,15 +74,13 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">
-						<div class="input-group col-xs-12">
-							<!--<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">
-								{{(infodata.guide_price-infodata.cost_price*(salefrobj.profit_ratio*0.01+1)).toFixed(2)}}
-							</p>-->
+					<div class="col-xs-4">
+						<p class="form-control-static">{{salefrobj.profit}}</p>	
+						<!--<div class="input-group col-xs-12">
 							<input type="text" class="form-control" placeholder="利润" ng-model="salefrobj.profit">
-						</div>
+						</div>-->
 					</div>
-					<div class="col-sm-4 mt10">
+					<div class="col-sm-6 mt10">
 						<font face="Courier" class="text-danger">利润率=居游价-成本价*(利润率+1)</font>
 					</div>	
 				</div>
@@ -80,24 +91,21 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">红包金额&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-2">
-						<div class="input-group">
+					<div class="col-xs-4">
+						<p class="form-control-static">{{salefrobj.rebate_lower}}----{{salefrobj.rebate_unlimited}}</p>
+						<!--<div class="input-group">
 							<span class="input-group-addon">¥</span>
 							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' step=""
 							ng-model="salefrobj.rebate_lower">
-						</div>
+						</div>-->
 					</div>
-					<div class="col-xs-1">
-						<label for="lrl" class="pull-right text-right mt10">-----&nbsp;&nbsp;</label>
+					<!--<div class="col-xs-1">
+						<label for="lrl" class="pull-right text-right mt10">-----</label>
 					</div>
 					<div class="col-xs-2">
-						<div class="input-group">
-							<span class="input-group-addon">¥</span>
-							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' max="" 
-							ng-model="salefrobj.rebate_unlimited">
-						</div>
-					</div>	
-					<div class="col-sm-3 mt10">
+						<p class="form-control-static">{{salefrobj.rebate_unlimited}}</p>
+					</div>	-->
+					<div class="col-sm-6 mt10">
 						<font face="Courier" class="text-danger">红包金额  下限-----上限</font>
 					</div>						
 				</div>
@@ -125,19 +133,16 @@
 						<label for="lrl" class="pull-right text-right mt10">推荐到搜索列表&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-8">
+						<p class="form-control-static" ng-if="obj.isSelected">推荐</p>
+						<p class="form-control-static" ng-if="!obj.isSelected">不推荐</p>
 						<div class="input-group">
-							<input class=""
+							<!--<input class=""
 							bs-switch
 							type="checkbox" 
 							ng-model="obj.isSelected"
 							switch-size=""
-							ng-change = "onChange(obj.isSelected)"
-							> 
-						<!--<div class="input-group">
-							<span class="input-group-addon">¥</span>
-							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0'
-							ng-model="salefrobj.rebate_unlimited">
-						</div>-->
+							ng-disabled="true"
+							> -->
 						</div>
 					</div>					
 				</div>
@@ -161,13 +166,12 @@
 					</div>					
 				</div>-->
 
-				<div class="form-group">
+				<!--<div class="form-group">
 					<div class="col-sm-2 col-xs-12 col-md-offset-5 text-center">
 						<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="saleFrSetSave()">保存</button>
 					</div>
-				</div>
+				</div>-->
 
 			</div>
 		<!--</div>
 	</div>-->
-</div>
