--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -1,44 +1,59 @@
 <div class="container-fluid form-horizontal">
-				
-	<div class="col-xs-10 mt10" >
+
+	<div class="col-xs-12 col-md-12 mt10">
+		
+		<div class="col-xs-12">
+			<div class="col-xs-2 text-right">
+				<br/>
+				<br/>
+				<font face="Courier" size="5">系统确认想</font>
+				<br/>
+				<br/>
+			</div>
+		</div>
+
 		<div class="form-group">
-			<label class="col-xs-2 control-label">确认项</label>
+			<label class="col-sm-2 col-xs-12 control-label">确认项</label>
 			<div class="col-xs-10">
-				<select class="form-control" 
+				<p class="form-control-static">{{sysaffirm_target_code_info}}</p>
+				<!--<select class="form-control" 
 				ng-model="affirm.sysaffirm_target_code" ng-disabled="true"
 				ng-options="ticket_sys_affirm.value as ticket_sys_affirm.label for ticket_sys_affirm in page.affirmlist"
 	            >
-	            </select>
+	            </select>-->
 			</div>
 		</div>
 	</div>
 
 	<!-- 红海滩廊道需要的内容 -->
-	<div class="col-xs-10" 
+	<div class="col-xs-12 col-md-12" 
 		ng-show="affirm.sysaffirm_target_code == 'langdao' 
 		|| affirm.sysaffirm_target_code == 'huaxiapiaolian' 
 		|| affirm.sysaffirm_target_code == 'royaloc' 
 		|| affirm.sysaffirm_target_code == 'supply_tstc' ">
 		<div class="form-group">
-			<label class="col-xs-2 control-label">商品id</label>
+			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
 			<div class="col-xs-10">
-				<input type="text" class="form-control"
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_code"></p>
+				<!--<input type="text" class="form-control"
 				ng-model="affirm.sysaffirm_target_goods_code"  ng-disabled="true"
-				>
+				>-->
 			</div>
 		</div>
 	</div>
 
 
 	<!-- 红海滩廊道需要的内容 -->
-	<div class="col-xs-10" 
+	<div class="col-xs-12 col-md-12" 
 		ng-show="affirm.sysaffirm_target_code == 'langdao' 
 		|| affirm.sysaffirm_target_code == 'huaxiapiaolian'
 		|| affirm.sysaffirm_target_code == 'royaloc'  ">
 		<div class="form-group">
-			<label class="col-xs-2 control-label">退票类别</label>
+			<label class="col-sm-2 col-xs-12 control-label">退票类别</label>
 			<div class="col-xs-10">
-		    	<label class="radio-inline">
+				<p ng-if="affirm.sysaffirm_target_goods_back_type == '1'" class="form-control-static">只能退最大可用数量</p>
+				<p ng-if="affirm.sysaffirm_target_goods_back_type == '0'" class="form-control-static">不限制</p>
+		    	<!--<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_back_type" value="0"
 				  ng-model="affirm.sysaffirm_target_goods_back_type" ng-disabled="true"
 				  > 不限制
@@ -47,18 +62,20 @@
 				  <input type="radio" name="sysaffirm_target_goods_back_type" value="1"
 				  ng-model="affirm.sysaffirm_target_goods_back_type" ng-disabled="true"
 				  > 只能退最大可用数量
-				</label>
+				</label>-->
 		    </div>
 		</div>
 	</div>
-	<div class="col-xs-10" 
+	<div class="col-xs-12 col-md-12" 
 		ng-show="affirm.sysaffirm_target_code == 'langdao' 
 		|| affirm.sysaffirm_target_code == 'huaxiapiaolian'
 		|| affirm.sysaffirm_target_code == 'royaloc'  ">
 		<div class="form-group">
-			<label class="col-xs-2 control-label">成人/儿童</label>
+			<label class="col-sm-2 col-xs-12 control-label">成人/儿童</label>
 			<div class="col-xs-10">
-		    	<label class="radio-inline">
+				<p ng-if="affirm.sysaffirm_target_goods_child_flag == '1'" class="form-control-static">儿童</p>
+				<p ng-if="affirm.sysaffirm_target_goods_child_flag == '0'" class="form-control-static">成人</p>
+		    	<!--<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_child_flag" value="0"
 				  ng-model="affirm.sysaffirm_target_goods_child_flag" ng-disabled="true"
 				  > 成人
@@ -67,11 +84,11 @@
 				  <input type="radio" name="sysaffirm_target_goods_child_flag" value="1"
 				  ng-model="affirm.sysaffirm_target_goods_child_flag" ng-disabled="true"
 				  > 儿童
-				</label>
+				</label>-->
 		    </div>
 		</div>
 	</div>
-
+<!--
 	<div class="col-xs-10"  ng-if="(saleobj.state == '0') && (util.what != 'info')">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label"></label>
@@ -81,7 +98,7 @@
 				>保存</button>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
 		
 </div>
