--- a/app/07product/views/productinfointegral.html
+++ b/app/07product/views/productinfointegral.html
@@ -1,19 +1,40 @@
 <div class="container-fluid form-horizontal">
+
 	<div class="col-xs-12 col-md-12 mt10">
-		<div class="form-group" >
-			<label class="col-sm-3 col-xs-12 control-label">最高可用积分</label>
+		
+		<div class="col-xs-12">
+			<div class="col-xs-2 text-right">
+				<br/>
+				<br/>
+				<font face="Courier" size="5">积分配置</font>
+				<br/>
+				<br/>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">最高可用积分</label>
 			<div class="col-sm-4 col-xs-12">
-				<input type="number" min="0" name="fxbt" class="form-control form-inline" placeholder="积分" ng-model="obj.integral_price" />
+				<p class="form-control-static">{{obj.integral_price}}</p>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger">此名称用于设置最高可用积分</font>
+			</div>
+		</div>
+		<!--<div class="form-group" >
+			<label class=" col-xs-12 control-label">最高可用积分</label>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static">{{obj.integral_price}}</p>
 			</div>
 			<div class="col-sm-5 mt10">
 				<font face="Courier" class="text-danger">此名称用于设置最高可用积分</font>
 			</div>
-		</div>
-		<div class="form-group">
+		</div>-->
+		<!--<div class="form-group">
 			<div class="col-sm-2 col-xs-12 col-md-offset-4 text-center">
 				<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="salejfsave()">保存</button>
 			</div>
-		</div>
+		</div>-->
 
 	</div>	
 </div>
