--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -2,11 +2,14 @@
 	form.tab-form-demo .tab-pane {
 		margin: 20px 20px;
 	}
+	.custom-panel {
+		margin-bottom: 0px;
+	}
 </style>
 
 <!--<div class="col-sm-12" style="background: #fff; padding-top: 15px;">
 	<div>-->
-<div class="panel panel-primary">
+<div class="panel panel-primary custom-panel">
 	<div class="panel-heading text-center">
 		<font face="Courier" class="" size="5">产品详情</font>
 	</div>
