--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -112,15 +112,19 @@
 					<div class="container-fluid form-horizontal">
 						<div class="col-xs-12 col-md-12 mt10">
 							<div class="form-group">
-								<label class="col-sm-2 col-xs-12 control-label">审核意见</label>
+								<label class="col-sm-2 col-xs-12 control-label">审核意见{{auditingFlag}}</label>
 								<div class="col-xs-8">
 									<textarea class="form-control" rows="3" ng-model="saleobj.apply_note" placeholder="审核意见,必填"></textarea>
 								</div>
 								<div class="col-xs-12 text-center">
 									<br/>
 									<br/>
-									<button class="btn btn-success" ng-click="pass()">审核&nbsp;通过</button>
-									<button class="btn btn-danger" ng-click="nopass()">审核不通过</button>
+									<button class="btn btn-success" ng-click="pass()" ng-show="auditingFlag">审核&nbsp;通过</button>
+									<button class="btn btn-default" ng-click="pass()" ng-show="!auditingFlag">
+										请仔细查看产品信息<br/>
+										还需<font face="Courier" color="red" size="5">{{auditingInfo}}</font>秒可以审核
+									</button>
+									<button class="btn btn-danger" ng-click="nopass()" ng-show="auditingFlag">审核不通过</button>
 									<br/>
 									<br/>
 									<br/>
