产品审核限制03331002

--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -120,7 +120,7 @@
 									<br/>
 									<br/>
 									<button class="btn btn-success" ng-click="pass()" ng-show="auditingFlag">审核&nbsp;通过</button>
-									<button class="btn btn-default" ng-click="pass()" ng-show="!auditingFlag">
+									<button class="btn btn-default" ng-show="!auditingFlag">
 										请仔细查看产品信息<br/>
 										还需<font face="Courier" color="red" size="5">{{auditingInfo}}</font>秒可以审核
 									</button>
