产品神恶化限制0331003

--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -112,7 +112,7 @@
 					<div class="container-fluid form-horizontal">
 						<div class="col-xs-12 col-md-12 mt10">
 							<div class="form-group">
-								<label class="col-sm-2 col-xs-12 control-label">审核意见{{auditingFlag}}</label>
+								<label class="col-sm-2 col-xs-12 control-label">审核意见</label>
 								<div class="col-xs-8">
 									<textarea class="form-control" rows="3" ng-model="saleobj.apply_note" placeholder="审核意见,必填"></textarea>
 								</div>
