--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -120,11 +120,11 @@
 									<br/>
 									<br/>
 									<button class="btn btn-success" ng-click="pass()" ng-show="auditingFlag">审核&nbsp;通过</button>
-									<button class="btn btn-default" ng-show="!auditingFlag">
-										请仔细查看产品信息<br/>
-										还需<font face="Courier" color="red" size="5">{{auditingInfo}}</font>秒可以审核
-									</button>
 									<button class="btn btn-danger" ng-click="nopass()" ng-show="auditingFlag">审核不通过</button>
+									
+									<button class="btn btn-success" ng-show="!auditingFlag" disabled="disabled">审核&nbsp;通过</button>
+										<font  ng-show="!auditingFlag" face="Courier" color="red" size="5">{{auditingInfo}}</font>
+									<button class="btn btn-danger" ng-show="!auditingFlag" disabled="disabled">审核不通过</button>
 									<br/>
 									<br/>
 									<br/>
