票种操作去除0331001

--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -119,10 +119,10 @@
 								<div class="col-xs-12 text-center">
 									<br/>
 									<br/>
-									<button class="btn btn-success" ng-click="pass()" ng-show="auditingFlag">审核&nbsp;通过</button>
+									<button class="btn btn-success" ng-click="pass()" ng-show="auditingFlag">审&nbsp;核&nbsp;通&nbsp;过</button>
 									<button class="btn btn-danger" ng-click="nopass()" ng-show="auditingFlag">审核不通过</button>
-									
-									<button class="btn btn-success" ng-show="!auditingFlag" disabled="disabled">审核&nbsp;通过</button>
+
+									<button class="btn btn-success" ng-show="!auditingFlag" disabled="disabled">审&nbsp;核&nbsp;通&nbsp;过</button>
 										<font  ng-show="!auditingFlag" face="Courier" color="red" size="5">{{auditingInfo}}</font>
 									<button class="btn btn-danger" ng-show="!auditingFlag" disabled="disabled">审核不通过</button>
 									<br/>
