--- a/app/07product/views/productinfotickettype.html
+++ b/app/07product/views/productinfotickettype.html
@@ -46,7 +46,7 @@
 					<th class="col-md-1 text-center">票种属性</th>
 					<th class="col-md-2 text-center">有效期开始</th>
 					<th class="col-md-2 text-center">有效期结束</th>
-					<th class="col-md-1 text-center" ng-if="saleobj.state == '0'">操作</th>
+					<!--<th class="col-md-1 text-center" ng-if="saleobj.state == '0'">操作</th>-->
 				</tr>
 			</thead>
 			<tbody>
